# shortcircuit-xt

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakeLists.txt.main  CMakeUserPresets.json  LICENSE  README.md  azure-pipelines.yml  x
clients/: CMakeLists.txt
clients/akai-dump/: CMakeLists.txt  akai-dump.cpp
clients/clap-first/: CMakeLists.txt  clap-config.cpp  clap-config.h  scxt-clap-entry.cpp
clients/cli-client/: CMakeLists.txt  audio.cpp  cli_client.h  main.cpp  midi.cpp  patches.h
clients/cli-tools/: CMakeLists.txt  riff-dump.cpp  sfz-token-dump.cpp
clients/exs-dump/: CMakeLists.txt  exs-dump.cpp
clients/init-maker/: CMakeLists.txt  init-maker.cpp
clients/juce-app-client/: CMakeLists.txt  app.h  audio.cpp  juce-app-client-main.cpp  midi.cpp
clients/juce-plugin/: CMakeLists.txt  SCXTPluginEditor.cpp  SCXTPluginEditor.h  SCXTProcessor.cpp  SCXTProcessor.h
clients/riff-dump/: CMakeLists.txt  riff-dump.cpp
clients/sfz-token-dump/: CMakeLists.txt  main.cpp
clients/throwaway-test-main/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/eurorack/: CMakeLists.txt
libs/libgig-4.3.0/: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  Makefile.am  Makefile.cvs  Makefile.in  Makefile.svn  NEWS  README  TODO  aclocal.m4  akai.pc.in  config.h.in  configure  configure.ac  gig.pc.in  libgig.spec.in
libs/md5sum/: .gitignore  CMakeLists.txt  LICENSE  README.md  README.shortcircuit  README_zh-CN.md  benchmark.cc  demo.cc
libs/sqlite3-3.42.0/: CMakeLists.txt
libs/vt_dsp/: lattice.cpp  lattice.h  lipol.h
libs/vt_gui/: arrowhmove.cur  arrowvmove.cur  browserdata.cpp  browserdata.h  vt_gui.h  vt_gui_controls.h  vt_gui_controls_browser.cpp  vt_gui_controls_lfo.cpp  vt_gui_controls_list.cpp  vt_gui_waveedit.cpp  vtgiurc.rc  zoomout.cur
libs/vt_util/: vt_lockfree.cpp  vt_lockfree.h  vt_string.cpp  vt_string.h
libs/xiph/: CMakeLists.txt
src/: CMakeLists.txt  Info.plist  Precompiled.h  Precompiled_common.h  Precompiled_mac.pch  Sprints.md  UpgradeLog.XML  akai_s6k_import.cpp  battery_kit_import.cpp  biquadunit.cpp  biquadunit.h  configuration.cpp  configuration.h  configuration_dialog.cpp  controllers.h  cpuarch.cpp  cpuarch.h  ctypes.h  dls.h  dls_import.cpp  dspmodules.h  envelope.cpp  filter.cpp  filter_defs.h  filters_chorus.cpp  filters_delay_based.cpp  filters_destruction.cpp  filters_dualdelay.cpp  filters_dynamics.cpp  filters_eq.cpp  filters_luxury.cpp  filters_modulation.cpp  filters_oscillator.cpp  filters_reverb.cpp  filters_supersvf.cpp  filters_traditional.cpp  generator.cpp  generator.h  globals.h  interaction_parameters.h  (+71 more)
src-next/: CMakeLists.txt  Sprints.md  configuration.h  utils.cpp  utils.h
src-next/datamodel/: adsr_storage.h  parameter.h  timedata.h
src-next/dsp/: generator.cpp  generator.h  resampling.h  sinc_table.cpp  sinc_table.h
src-next/engine/: engine.cpp  engine.h  group.cpp  group.h  keyboard.h  part.cpp  part.h  patch.h  zone.cpp  zone.h
src-next/infrastructure/: file_map_view.cpp  file_map_view.h  filesystem_import.h  sse_include.h
src-next/json/: datamodel_traits.h  dsp_traits.h  engine_traits.h  extensions.h  modulation_traits.h  sample_traits.h  scxt_traits.h  stream.cpp  stream.h  utils_traits.h
src-next/messaging/: messaging.cpp  messaging.h
src-next/modulation/: voice_matrix.cpp  voice_matrix.h
src-next/sample/: sample.cpp  sample.h  sample_manager.cpp  sample_manager.h
src-next/tuning/: equal.cpp  equal.h
src-next/voice/: voice.cpp  voice.h
src-ui/: CMakeLists.txt
src-ui/app/: HasEditor.h  SCXTEditor.h  SCXTEditorDataCache.h
src-ui/components/: AboutScreen.cpp  AboutScreen.h  GlyphPainter.h  HasEditor.cpp  HasEditor.h  HeaderRegion.cpp  HeaderRegion.h  LogScreen.cpp  LogScreen.h  MixerScreen.cpp  MixerScreen.h  MultiScreen.cpp  MultiScreen.h  PlayScreen.cpp  PlayScreen.h  SCXTEditor.cpp  SCXTEditor.h  SCXTEditorMenus.cpp  SCXTEditorResponseHandlers.cpp  SCXTJuceLookAndFeel.h  SendFXScreen.cpp  SendFXScreen.h  WelcomeScreen.cpp  WelcomeScreen.h
src-ui/connectors/: Connectors.h  JSONAssetSupport.cpp  JSONAssetSupport.h  JSONLayoutConsumer.cpp  JSONLayoutConsumer.h  JsonLayoutEngineSupport.cpp  JsonLayoutEngineSupport.h  PayloadDataAttachment.h  SCXTResources.cpp  SCXTResources.h  SCXTStyleSheetCreator.cpp  SCXTStyleSheetCreator.h
src-ui/json-layout/: README_JSON_LAYOUTS.md
src-ui/theme/: ColorMap.cpp  ColorMap.h  Layout.h  ThemeApplier.cpp  ThemeApplier.h
src/browser/: ContentBrowser.cpp  ContentBrowser.h  browser.cpp  browser.h  browser_db.cpp  browser_db.h  browser_db_impl.h  browser_lin.cpp  browser_macos.mm  browser_win.cpp  scanner.cpp  scanner.h  sql_support.h  writer_worker.h
src/clients/: CMakeLists.txt
src/datamodel/: adsr_storage.cpp  adsr_storage.h  metadata.h  metadata_detail.h  parameter.cpp  parameter.h  timedata.h
src/dsp/: data_tables.cpp  data_tables.h  generator.cpp  generator.h  resampling.h  sample_analytics.cpp  sample_analytics.h  sinc_table.cpp  sinc_table.h  smoothers.h
src/engine/: bus.cpp  bus.h  bus_effect.cpp  clipboard.h  clipboard_impl.h  engine.cpp  engine.h  engine_voice_responder.cpp  feature_enums.h  group.cpp  group.h  group_and_zone.h  group_and_zone_impl.h  group_triggers.cpp  group_triggers.h  keyboard.h  macros.cpp  macros.h  memory_pool.cpp  memory_pool.h  missing_resolution.cpp  missing_resolution.h  (+9 more)
tests/: CMakeLists.txt  config_test.cpp  console_ui.cpp  console_ui.h  exclusive_group_tests.cpp  filesystem_basics.cpp  format_tests.cpp  glide_tests.cpp  importer_tests.cpp  logging_test.cpp  lowlevel_io.cpp  macro_id_tests.cpp  midi_channel_tests.cpp  mmio_test.cpp  mod_matrix_operations_tests.cpp  modify_structure.cpp  modulator_tests.cpp  oneday.cpp  processors_and_fx.cpp  profiler_test.cpp  sample_analytics.cpp  sample_fuzz.cpp  sample_load.cpp  selection_manager.cpp  selection_tests.cpp  sf2_tests.cpp  sfz_parse.cpp  streaming.cpp  test_invariant_exs_import.cpp  test_main.cpp  test_main.h  test_utilities.cpp  test_utilities.h  ui_basics.cpp  undo_tests.cpp  vt_miscellany.cpp  zone_tests.cpp
ui-next/: CMakeLists.txt
(+1303 files in other folders)
